Closed Bug 34014 Opened 26 years ago Closed 25 years ago

if XPInstall err occurs during install, report err & stop install

Categories

(SeaMonkey :: Installer, defect, P1)

PowerPC
Mac System 8.5

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: cathleennscp, Assigned: samir_bugzilla)

Details

(Keywords: dataloss, helpwanted, Whiteboard: [nsbeta2-][nsbeta3+][PDTP1] Super reviewed fix in hand)

Attachments

(2 files)

During installation phase, if any XPInstall error occurs, Mac Install Wizard need to report the error, and stops installation process.
Ambitiously targeting M16.
Status: NEW → ASSIGNED
Target Milestone: --- → M16
need to stop installation, if any error occurs.
Keywords: nsbeta2
Whiteboard: [nsbeta2+][5/16]
Putting on [nsbeta2+][5/16] radar. This is a feature MUST complete work by 05/16 or we may pull this feature for PR2.
This is *not* a feature. It's a bug. Moving to M17.
Target Milestone: M16 → M17
Agreed - a bug...not a feature. But putting on [nsbeta2-] radar. Not critical to beta2. Unless something very bad happens here?
Keywords: nsbeta3
Whiteboard: [nsbeta2+][5/16] → [nsbeta2-]
PDT, To respond: the very bad thing that may happen here is that the user may perceive that the installation was fine when in fact the product is only half installed. This mystery will cause tremendous tech support headaches. Renominating.
Whiteboard: [nsbeta2-]
General error handling is in the installer now. Takes care of part of this bug.
putting on nsbeta2- radar
Whiteboard: [nsbeta2-]
Whiteboard: [nsbeta2-] → [nsbeta2-][nsbeta3-]
I have encountered what appears to be one form of this bug in the Mac build for 8/29. If there is insufficient disk space to do the install, the installer leaves the impression that installation was successful although only a partial installation was actually done. I must agree that support people are really, really going to appreciate NOT having to deal with failure of the installer to give proper error feedback to the users. Dale
updating mac mozilla installer QA contact to me
QA Contact: gbush → asa
helpwanted! Marking dataloss because I expect things like dataloss or crashes to occur.
Keywords: dataloss, helpwanted, ui
Removing dataloss keyword. I don't see how the user loses data in this case. If the installer doesn't install a zippy successfully (no crash, please note), then the user simply has an incomplete installation. If you are considering the upgrade case, the installer is not built to be an upgarde solution -- merely a first time install solution.
Keywords: dataloss
This is dataloss in a way. The user thinks they got all the files they were installing, but in reality they only got some of them.
Keywords: dataloss
Peer reviewed fix in hand. Will seek super review once this flips to nsbeta3+ status.
Raising priority and nominating nsbeta3+. People will assume mozilla is fine when in fact there could be serious problems.
Priority: P3 → P1
Whiteboard: [nsbeta2-][nsbeta3-] → [nsbeta2-][nsbeta3+] reviewed fix in hand
Sent for review to Syd.
Whiteboard: [nsbeta2-][nsbeta3+] reviewed fix in hand → [nsbeta2-][nsbeta3+] Super reviewed fix in hand
PDT agrees P1
Whiteboard: [nsbeta2-][nsbeta3+] Super reviewed fix in hand → [nsbeta2-][nsbeta3+][PDTP1] Super reviewed fix in hand
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
verified
Status: RESOLVED → VERIFIED
QA Contact: asa → gbush
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: