Throw up an error dialog and stop if any zippy errors detected.  [nsbeta3+ b=34014; r=ssu; a=syd]